// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests SearchScreen component Should call submit and return a superman card and set input with superman 1`] = `
<div
  className="row"
>
  <div
    className="col-5"
  >
    <h4>
      Search
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find your favorite hero"
        type="text"
        value="superman"
      />
      <button
        className="btn btn-outline-primary btn-block mt-1"
        type="submit"
      >
        Search...
      </button>
    </form>
  </div>
  <div
    className="col-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="card ms-3 animate__animated animate__fadeIn"
      style={
        Object {
          "maxWidth": 540,
        }
      }
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col-md-4"
        >
          <img
            alt="Superman"
            className="card-img"
            src="./assets/heroes/dc-superman.jpg"
          />
        </div>
        <div
          className="card-md-8"
        >
          <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              Superman
            </h5>
            <p
              className="card-text"
            >
              Kal-El
            </p>
            <p
              className="card-text"
            >
              <small
                className="text-muted"
              >
                Action Comics #1
              </small>
            </p>
            <a
              href="/hero/dc-superman"
              onClick={[Function]}
            >
              more...
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests SearchScreen component Should call submit and show error if hero not found 1`] = `
<div
  className="row"
>
  <div
    className="col-5"
  >
    <h4>
      Search
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find your favorite hero"
        type="text"
        value="anything"
      />
      <button
        className="btn btn-outline-primary btn-block mt-1"
        type="submit"
      >
        Search...
      </button>
    </form>
  </div>
  <div
    className="col-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="alert alert-danger"
    >
      There is no a hero with 
      anything
    </div>
  </div>
</div>
`;

exports[`Tests SearchScreen component Should display correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-5"
  >
    <h4>
      Search
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find your favorite hero"
        type="text"
        value=""
      />
      <button
        className="btn btn-outline-primary btn-block mt-1"
        type="submit"
      >
        Search...
      </button>
    </form>
  </div>
  <div
    className="col-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="alert alert-info"
    >
      Search a hero
    </div>
  </div>
</div>
`;

exports[`Tests SearchScreen component Should return a batman card and set input with batman 1`] = `
<div
  className="row"
>
  <div
    className="col-5"
  >
    <h4>
      Search
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find your favorite hero"
        type="text"
        value="batman"
      />
      <button
        className="btn btn-outline-primary btn-block mt-1"
        type="submit"
      >
        Search...
      </button>
    </form>
  </div>
  <div
    className="col-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="card ms-3 animate__animated animate__fadeIn"
      style={
        Object {
          "maxWidth": 540,
        }
      }
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col-md-4"
        >
          <img
            alt="Batman"
            className="card-img"
            src="./assets/heroes/dc-batman.jpg"
          />
        </div>
        <div
          className="card-md-8"
        >
          <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              Batman
            </h5>
            <p
              className="card-text"
            >
              Bruce Wayne
            </p>
            <p
              className="card-text"
            >
              <small
                className="text-muted"
              >
                Detective Comics #27
              </small>
            </p>
            <a
              href="/hero/dc-batman"
              onClick={[Function]}
            >
              more...
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
